Fix config pad en ondersteun aangepaste mapnamen
- Fix config.json pad om relatief ten opzichte van script te werken
- Update DEFAULT_CONFIG naar nieuwe Nederlandse namen met spaties
- Script werkt nu correct vanuit elke directory
- Command line opties ondersteunen nu namen met spaties (met quotes)
- Alle functionaliteit werkt met aangepaste config namen

--- a/config.json
+++ b/config.json
@@ -5,19 +5,19 @@
   "school_year_end_day": 31,
   "meeting_day": 0,
   "folder_types": {
-    "basic": [],
-    "aanvragenstudenten": [
+    "LEC Vergaderingen": [],
+    "Aanvragen Studenten": [
       "Aangepaste examinering",
       "Extra herkansing",
       "Hoger niveau",
       "Vrijstelling"
     ],
-    "diplomabesluiten": [
+    "Diplomabesluiten": [
       "Certificaten",
       "Diploma's",
       "Mbo-verklaringen"
     ],
-    "vaststellingen": [
+    "Vaststellingen": [
       "Diplomaplan keuzedelen",
       "Diplomaplan kwalificaties",
       "Exameninstrumenten",
